--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "A collection of useful classes to help making Laravel applications easier",
   "minimum-stability": "dev",
   "type": "library",
-  "license": "MIT",
+  "license": "LGPL-3.0",
   "keywords": [
     "helpers",
     "php",
