--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,10 @@
     }
   ],
   "require": {
-    "php": "^7.0.0"
-  },
-  "require-dev": {
-    "laravel/framework": "5.6.*"
+    "php": "^7.0.0",
+    "illuminate/support": "5.6.*",
+    "illuminate/database": "5.6.*",
+    "illuminate/http": "5.6.*"
   },
   "autoload": {
     "psr-4": {
