--- a/composer.json
+++ b/composer.json
@@ -28,9 +28,9 @@
   ],
   "require": {
     "php": "^7.0.0",
-    "illuminate/support": "5.6.*",
-    "illuminate/database": "5.6.*",
-    "illuminate/http": "5.6.*"
+    "illuminate/support": "5.5.*||5.6.*",
+    "illuminate/database": "5.5*||5.6.*",
+    "illuminate/http": "5.5*||5.6.*"
   },
   "autoload": {
     "psr-4": {
