--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
   "require": {
     "php": "^7.0.0",
     "illuminate/support": "5.5.*||5.6.*",
-    "illuminate/database": "5.5*||5.6.*",
+    "illuminate/database": "5.5.*||5.6.*",
     "illuminate/http": "5.5*||5.6.*"
   },
   "autoload": {
