--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     }
   ],
   "require": {
-    "php": "^7.0.0",
+    "php": "^7.0.0||^8.0.0",
     "illuminate/support": ">=5.0",
     "illuminate/database": ">=5.0",
     "illuminate/http": ">=5.0"
