--- a/composer.json
+++ b/composer.json
@@ -32,13 +32,13 @@
     }
   ],
   "require": {
-    "php": "^7.0.0||^8.0.0",
+    "php": "^7.2.0||^8.0.0",
     "illuminate/support": ">=5.0",
     "illuminate/database": ">=5.0",
     "illuminate/http": ">=5.0"
   },
   "require-dev": {
-    "orchestra/testbench": "3.8.x-dev"
+    "orchestra/testbench": "^5.17.1"
   },
   "autoload": {
     "psr-4": {
